
20070115:
	* added ability to specify X prefix

20060918:
	* fixed estimated number of images
	* only hide cursor when fullscreen

20060904:
	* send agent on http connection (http/1.1)
	* fixes for MacOSX.4

20051001:
	* Release 1.6

20050930:
	* fixed networking

20050802:
	* made resolution parser more robust
	* added help info
	* default to best available video depth.

20050401:
	* Copyright update
	* fixed up changelog

20050110:
	* added missing includes
	* force shutdown of network socket

20041228:
	* fixed "double-flash"

20040929:
	* Windows fixes

20040327:
	* hoist width variable in image.c (optimization)
	* mkstemps switch fix
	* moved configure.in to configure.ac
	* automake fixes
	* updated copyright info

20040303:
	* osX.3 issues fixed

20040102:
	* update for new RPM style (generated spec)
	* fix for rh9?

20031119:
	* use config header

20031011:
	* ditch libtool

20031004:
	* input is now case insensitive

20030627:
	* handle missing or bad files better

20021211:
	* added RCS tags
	* fix for --no-verify issue

20020119:
	* added resolution parm

20011221:
	* fixed LIBS line redundancy
	* improved data handling in image.c (table instead of ll)
	* added sync() function
	* addition of "loud" flag
	* experimental "scaling" keys added
	* store screen size instead of hardcoding it

20011125:
	* improved getopt_long search

20011103:
	* dump getopt_long include
	* use sdl-config instead of -lSDL

20011027:
	* fixed off by one bug in zooming

20010915:
	* Release 1.5

20010914:
	* Changed to getopt_long
	* added sleep parm
	* manpage updated
	* linux temp file name fixed for network loads
	* 8b zoom error fixed
	* NAME CHANGE due to legal issues.
	* fullscreen toggle no longer crashes
	* attempts to match current resolution when going fullscreen

20010601:
	* Release 1.4
	* Initial network stuff
	* Fixed X Async error for real (thnx Ted Mielczarek)

20010424:
	* Release 1.3
	* Fixed X Async stuff
	* Fixed 'only bad images' spin bug