@@ -1,4 +1,7 @@
 
+20070201:
+	* sprintf -> snprintf (openbsd messages)
+
 20070115:
 	* added ability to specify X prefix
 
@@ -118,7 +121,7 @@
 20010314:
 	* Initial release (1.0)
 
-$Id: ChangeLog,v 1.13 2007/01/15 16:47:47 erik Exp $
+$Id: ChangeLog,v 1.14 2007/02/01 15:19:31 erik Exp $
 	*
 20050802:
 	* made resolution parser more robust
@@ -222,4 +225,4 @@ $Id: ChangeLog,v 1.13 2007/01/15 16:47:47 erik Exp $
 20010314:
 	* Initial release (1.0)
 
-$Id: ChangeLog,v 1.13 2007/01/15 16:47:47 erik Exp $
+$Id: ChangeLog,v 1.14 2007/02/01 15:19:31 erik Exp $
